# gemini-3-20260221

./: README.md  gemini3.code-workspace
api/: .env.example  .gitignore  pyproject.toml  test_image_gen.py
api/app/: config.py  firebase.py  gemini.py  main.py  prompt-checker-28ddd-firebase-adminsdk-fbsvc-62668e5662.json  scenario.py  schemas.py
api/app/routers/: game.py  gemini.py  image_gen.py  live.py  photo.py  scenario.py  storage.py  suspect.py  turn.py
api/data/scenarios/: chapter_01.md  chapter_02.md  chapter_03.md  chapters.csv  hint_message.csv  solution.txt  suspects.csv
api/scripts/: generate_openapi.py
web/: index.html  openapi.yaml  orval.config.ts  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/api/endpoints/: gameAPI.ts
web/src/api/model/: accusationRequest.ts  accusationResponse.ts  answerRequest.ts  answerResponse.ts  avatarResponse.ts  bodyPlayTurnGameGameIdTurnPost.ts  bodyUploadFileStorageUploadPost.ts  bodyUploadPhotoGameGameIdPhotosPost.ts  gameCreateRequest.ts  gameResponse.ts  gameUpdateRequest.ts  generateImageRequest.ts  generateImageResponse.ts  generateRequest.ts  generateResponse.ts  hintMessage.ts  (+9 more)
web/src/assets/: death_dialog.md  ending_dialog.md  explain_rule.md  start_dialog.md  story.md
web/src/components/: AccusationOverlay.tsx  Layout.tsx  ProgressIndicator.tsx
web/src/constants/: characters.ts  characters.tsx
web/src/contexts/: GameContext.tsx
web/src/hooks/: useCamera.ts  useGameTurn.ts
web/src/pages/: ContextPage.tsx  EndingPage.tsx  MainPage.tsx  PreludePage.tsx
